added a resolution to bower

--- a/bower.json
+++ b/bower.json
@@ -3,42 +3,34 @@
   "description": "University of Virginia Library Alert dialog",
   "main": "uvalib-alerts.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.8.1",
-    "uvalib-elements": "uvalib-components/uvalib-elements#master",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.2.5"
-  },
-  "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
-    "web-component-tester": "^4.0.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
+    "uvalib-elements": "uvalib-components/uvalib-elements#master"
   },
   "resolutions": {
-    "polymer": "^1.9.0",
-    "web-component-tester": "^5.0.1",
-    "iron-icons": "^1.2.1",
     "uvalib-elements": "master",
-    "lodash": "^4.17.4",
-    "mocha": "^3.1.2",
-    "uvalib-analytics": "master",
     "uvalib-alerts": "master",
+    "uvalib-analytics": "master",
     "uvalib-banner": "master",
+    "uvalib-images": "master",
     "uvalib-button": "master",
-    "uvalib-events-card": "master",
-    "uvalib-header": "master",
-    "uvalib-footer": "master",
-    "uvalib-hours-card": "master",
-    "uvalib-helper-libs": "master",
-    "uvalib-nav": "master",
     "uvalib-card": "master",
-    "uvalib-logos": "master",
-    "uvalib-models": "master",
-    "uvalib-search-box": "master",
+    "uvalib-events-card": "master",
+    "uvalib-footer": "master",
+    "uvalib-header": "master",
+    "uvalib-helper-libs": "master",
+    "uvalib-hours-card": "master",
     "uvalib-liame": "master",
+    "uvalib-models": "master",
+    "uvalib-logos": "master",
+    "uvalib-nav": "master",
     "uvalib-news-section": "master",
-    "app-storage": "^0.10.0",
+    "uvalib-search-box": "master",
+    "uvalib-social-links": "master",
     "uvalib-theme": "master",
     "uvalib-skip-nav": "master",
-    "uvalib-social-links": "master"
+    "polymer": "^1.9.0",
+    "iron-icons": "^1.2.1",
+    "app-storage": "^0.10.0",
+    "uva-footer": "master",
+    "lodash": "^4.17.4"
   }
 }
